# scopify-photo

./: .eslintrc.js  .gitignore  .prettierrc  LICENSE  README.md  about.html  binding.gyp  forge.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.renderer.config.ts
pages/: index.html
src/: about.ts  index.css  interface.d.ts  main.ts  preload.ts  worker.js
src/app/: App.tsx  AppContext.tsx  main.tsx
src/app/components/: CheckBoxTick.tsx  OffCanvasVideoCrop.tsx  Spinner.tsx  VectorScope.tsx  VideoPlay.tsx  VideoPreview.tsx  VideoPreviewModal.tsx
src/app/components/Video/: VectorScope.tsx  VideoPlay.tsx  VideoPreview.tsx  VideoSelectionCrop.tsx  VideoSelectionModal.tsx  VideoSelectionSource.tsx
src/app/components/modal/: BackButton.tsx  NextButton.tsx  PreferencesModal.tsx  SourceGridView.tsx  VideoSelectionCrop.tsx  VideoSelectionModal.tsx  VideoSelectionSource.tsx
src/app/components/navigation/: MenuBar.tsx  MenuItemComponent.tsx  Navbar.tsx  SubMenuComponent.tsx
src/app/components/scope/: VectorScope.tsx
src/lib/: cropping.ts  utils.ts
src/lib/cpp/: imageconvert.cpp  imageconvert.hpp  perf.cpp  perf.hpp  transformation.cpp  transformation.hpp  utils.hpp
src/lib/cpp/test/: CMakeLists.txt  transformation_test.cpp
src/lib/imageconvertcpp/: imageconvert.cpp
src/lib/shader/: huering.glsl.d.ts  huering.glsl.js
src/types/: enums.ts  types.d.ts
types/: types.d.ts
